Update project descriptions and stack in index.html
This commit updates the project descriptions and stack for the ERP System, BlueSky Insurance, Automation Testing for ERP System, and HR Management System in the index.html file. The project descriptions have been revised to provide more accurate and informative information. The project stack now includes additional technologies and tools.

Fixes #123

--- a/index.html
+++ b/index.html
@@ -107,89 +107,102 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>ERP System</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              An ERP (Enterprise Resource Planning) system integrates core business processes into a single software solution, streamlining operations across departments like finance, HR, and inventory.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
+              <li class="project__stack-item">ASP.NET(MVC)</li>
+              <li class="project__stack-item">MSSQL</li>
+              <li class="project__stack-item">C#</li>
+              <li class="project__stack-item">ExtJs</li>
+              <li class="project__stack-item">Bootstrap</li>
+              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">Jquery</li>
+              <li class="project__stack-item">Ajax</li>
+              <li class="project__stack-item">Html</li>
+              <li class="project__stack-item">Css</li>
+              <li class="project__stack-item">Css</li>
+              <li class="project__stack-item">SP</li>
+              <li class="project__stack-item">GIT</li>
+              <li class="project__stack-item">SVN</li>
 
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+            </ul>       
           </div>
 
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>BlueSky Insurance</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              Blusky Insurance offers reliable motorcycle coverage with customizable plans to suit every rider. Whether you need liability, collision, or roadside assistance, Blusky keeps you protected on the road. Enjoy peace of mind and competitive rates, all backed by exceptional customer service. Ride confidently with Blusky Insurance.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+              <li class="project__stack-item">ASP.NET(MVC)</li>
+              <li class="project__stack-item">MSSQL</li>
+              <li class="project__stack-item">C#</li>
+              <li class="project__stack-item">Bootstrap</li>
+              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">Jquery</li>
+              <li class="project__stack-item">Ajax</li>
+              <li class="project__stack-item">Html</li>
+              <li class="project__stack-item">Css</li>
+              <li class="project__stack-item">GIT</li>
+              <li class="project__stack-item">Azure Devops</li>
+              <li class="project__stack-item">REST API</li>
+
+            </ul> 
           </div>
           <div class="project">
-            <h3>Project 3</h3>
+            <h3>Automation Testing for ERP System</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              Automation testing for ERP systems enhances efficiency, accuracy, and speed in validating complex enterprise applications. By automating tests like regression, functional, and performance checks, organizations can ensure seamless operations across modules (e.g., finance, HR, inventory) while reducing testing time and costs.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Selenium</li>
+              <li class="project__stack-item">Nunit</li>
+              <li class="project__stack-item">Gherkin</li>
             </ul>
-
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
           </div>
+          <div class="project">
+            <h3>RecruitProx</h3>
+            <p class="project__description">
+              RecruitProx for Recruiters is an all-in-one recruitment platform that simplifies and speeds up the hiring process.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">ASP.NET(MVC)</li>
+              <li class="project__stack-item">MSSQL</li>
+              <li class="project__stack-item">C#</li>
+              <li class="project__stack-item">Bootstrap</li>
+              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">Jquery</li>
+              <li class="project__stack-item">Ajax</li>
+              <li class="project__stack-item">Html</li>
+              <li class="project__stack-item">Css</li>
+              <li class="project__stack-item">GIT</li>
+              <li class="project__stack-item">Azure Devops</li>
+              <li class="project__stack-item">REST API</li>
+            </ul>
+          </div>
+          <div class="project">
+            <h3>HR Management System</h3>
+            <p class="project__description">
+              A HR Management System (HRMS) is a software that automates HR tasks like recruitment, payroll, performance tracking, and employee management.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">ASP.NET(MVC)</li>
+              <li class="project__stack-item">MSSQL</li>
+              <li class="project__stack-item">C#</li>
+              <li class="project__stack-item">Bootstrap</li>
+              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">Jquery</li>
+              <li class="project__stack-item">Ajax</li>
+              <li class="project__stack-item">Html</li>
+              <li class="project__stack-item">Css</li>
+              <li class="project__stack-item">GIT</li>
+              <li class="project__stack-item">Azure Devops</li>
+              <li class="project__stack-item">REST API</li>
+            </ul>
+          </div>
+         
         </div>
       </section>
 
