--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Rex V. Bogani</span></h1>
+        <h1 id="typing-effect">Hi, I am <span class="about__name">Rex V. Bogani</span></h1>
         <h2 class="about__role">Software Engineer</h2>
         <p class="about__desc">
           Dedicated and Innovative Software Developer with
