--- a/index.html
+++ b/index.html
@@ -206,6 +206,21 @@
               <li class="project__stack-item">REST API</li>
             </ul>
           </div>
+
+          <div class="project">
+            <h3>Azer Travel and Tours</h3>
+            <p class="project__description">
+              travel agency committed to delivering world-class travel services for individuals, families, and corporate clients. With a deep passion for travel and an unwavering dedication to excellence, we specialize in creating personalized travel experiences tailored to your unique needs and preferences.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">PHP</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">Bootstrap</li>
+              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">Jquery</li>
+            </ul>
+          </div>
          
         </div>
       </section>
